Adding other services HTML page

--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
         </div>
     </div>
 
+    <div class="center">
+        <div>
+            <div class="section-heading" style="font-size: 18px; padding: 10px 20px; background-color: #26aade;">
+                <a href="typeform.html" style="color: #fff;">Get Started - Email Leads</a>
+            </div>  
+        </div>
+    </div>
+    
     <div style="text-align: center;">
         <div class="section-heading">
             Converting Your Connections
@@ -127,7 +135,7 @@
                 <div class="subsection-heading">Business Website</div>
                 <div class="section-content">
                     <hr>
-                    We have a team of graphic designers and web developers to help land your customers. We take your ideas and turn them into an actual landing page you'll be proud to direct your customers to. We use an iterative process to make sure the direction we're going matches what you want. Single page landing sites are $500 and include everything you need.
+                    We have a team of graphic designers and web developers to help land your customers. We take your ideas and turn them into an actual landing page you'll be proud to direct your customers to. We use an iterative process to make sure the direction we're going matches what you want. <b>Single page landing sites are $500 and include everything you need.</b>
                 </div>
             </div>
             <div class="col s12 m4">
@@ -135,14 +143,14 @@
                 <div class="section-content">
                     <hr>
                     Now that you have a ton of verified email leads, we'd love to help you drive conversion rates  through the roof. e1r1 has a team of copywriters ready to help you professionally communicate what you offer. We're so confident we can help, we garuantee better email conversion rates or your money back! 
-                    Marketing email templates are $200/template. 
+                    <b>Marketing email templates are $200/template. </b>
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="subsection-heading">Marketing Training</div>
                 <div class="section-content">
                     <hr>
-                    Going beyond emails, we have extensive experience in making the most out of your social media channels and combining those channels with emails and websites. We'll help you identify areas of improvement and then develop an actual plan to realistically get you to where you want to be. We cover branding, engagement, and whatever else is on your mind. We charge $50/hour and try to be very respectful of your time.
+                    Going beyond emails, we have extensive experience in making the most out of your social media channels and combining those channels with emails and websites. We'll help you identify areas of improvement and then develop an actual plan to realistically get you to where you want to be. We cover branding, engagement, and whatever else is on your mind. We charge <b>$50/hour</b> and try to be very respectful of your time.
                 </div>
             </div>
         </div>
